--- a/styles/main.css
+++ b/styles/main.css
@@ -1,11 +1,20 @@
-/header {
+header {
 	background-color: orange;
-	margin-bottom: 40px;
+	margin-bottom: 50px;
 }
+
 
 body {
 	font-family: "Roberto", sans-serif;
-	color: #252525;
+	color: black;
+}
+
+
+
+
+header h1 {
+  line-height: 1;
+  margin-bottom: 0;
 }
 
 .image-card {
@@ -13,32 +22,19 @@ body {
 }
 
 .card {
-	border: 2px solid black;
+	border: 1px solid black;
+	margin-bottom: 20px;
 }
 
 .card-content {
-	padding: 15px;
+	padding: 20px;
 }
 
-.card-content h3{
+.card-content h3 {
 	margin-top: 0;
 	margin-bottom: 0;
 }
 
 .card-content p {
 	margin: 0.5em 0;
-}
-
-header p {
-  margin-top: 0.5em;
-}
-
-header h1 {
-  line-height: 1;
-  margin-bottom: 0;
-}
-
-.banner {
-	display: block;
-	background-color: orange;
 }
